# ipopt_vendor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
Ipopt/ThirdParty-ASL/: Makefile  arithchk  coinasl.pc  config.status  details.lo  libcoinasl.la  libtool
Ipopt/ThirdParty-ASL/.deps/: arithchk-fpinit.Po  details.Plo
Ipopt/ThirdParty-ASL/.libs/: libcoinasl.lai  libcoinasl.so.2  libcoinasl.so.2.1.0
Ipopt/ThirdParty-ASL/solvers/: 00lastchange  asldate.lo  atof.lo  auxinfo.lo  avltree.lo  b_search.lo  basename.lo  bscanf.lo  com2eval.lo  comeval.lo  con1ival.lo  con2ival.lo  con2val.lo  conadj.lo  conpval.lo  conscale.lo  conval.lo  degree.lo  derprop.lo  dtoa1.lo  duthes.lo  dynlink.lo  f_read.lo  fg_read.lo  fg_write.lo  fgh_read.lo  fpecatch.lo  fpinit.lo  fullhes.lo  func_add.lo  funcadd1.lo  g_fmt.lo  genrowno.lo  getenv.lo  getstub.lo  htcl.lo  indic_cons.lo  jac0dim.lo  jac2dim.lo  jacdim.lo  (+49 more)
Ipopt/ThirdParty-ASL/solvers/.deps/: arithchk-arithchk.Po  asldate.Plo  atof.Plo  auxinfo.Plo  avltree.Plo  b_search.Plo  basename.Plo  bscanf.Plo  com2eval.Plo  comeval.Plo  con1ival.Plo  con2ival.Plo  con2val.Plo  conadj.Plo  conpval.Plo  conscale.Plo  conval.Plo  degree.Plo  derprop.Plo  dtoa1.Plo  duthes.Plo  dynlink.Plo  f_read.Plo  fg_read.Plo  fg_write.Plo  fgh_read.Plo  fpecatch.Plo  fpinit.Plo  fullhes.Plo  func_add.Plo  funcadd1.Plo  g_fmt.Plo  genrowno.Plo  getenv.Plo  getstub.Plo  (+54 more)
Ipopt/ThirdParty-HSL/: CoinHslConfig.h  Makefile  coinhsl.pc  config.h  config.status  libcoinhsl.la  libtool  metis_adapter.c
Ipopt/ThirdParty-HSL/.deps/: metis_adapter.Plo
Ipopt/ThirdParty-HSL/.libs/: libcoinhsl.lai  libcoinhsl.so.2.2.5
Ipopt/ThirdParty-Mumps/: .gitignore  Makefile  coinmumps.pc  config.h  config.status  dmumps_ana_aux_m.mod  dmumps_ana_lr.mod  dmumps_buf.mod  dmumps_dynamic_memory_m.mod  dmumps_fac1_ldlt_m.mod  dmumps_fac1_lu_m.mod  dmumps_fac2_ldlt_m.mod  dmumps_fac2_lu_m.mod  dmumps_fac_asm_master_elt_m.mod  dmumps_fac_asm_master_m.mod  dmumps_fac_front_aux_m.mod  dmumps_fac_front_type2_aux_m.mod  dmumps_fac_lr.mod  dmumps_fac_omp_m.mod  dmumps_fac_par_m.mod  dmumps_facsol_l0omp_m.mod  dmumps_load.mod  dmumps_lr_core.mod  dmumps_lr_data_m.mod  dmumps_lr_stats.mod  dmumps_lr_type.mod  dmumps_ooc.mod  dmumps_ooc_buffer.mod  dmumps_parallel_analysis.mod  dmumps_save_restore.mod  dmumps_save_restore_files.mod  dmumps_sol_es.mod  dmumps_sol_l0omp_m.mod  dmumps_sol_lr.mod  libcoinmumps.la  libtool  mumps_ana_blk_m.mod  mumps_ana_omp_m.mod  mumps_build_sort_index_elt_m.mod  mumps_build_sort_index_m.mod  (+4 more)
Ipopt/ThirdParty-Mumps/.deps/: dmumps_c.Plo
Ipopt/ThirdParty-Mumps/.libs/: libcoinmumps.lai  libcoinmumps.so.3.0.9
Ipopt/src/Algorithm/: IpEquilibrationScaling.cpp  IpIpoptAlg.cpp
Ipopt/src/Interfaces/: IpTNLPAdapter.cpp
(+189 files in other folders)
